languages/io-automaton-fe/src/test/resources/valid/symtab/ForStateCreationTest.ioautomaton
package valid.symtab;

automaton ForStateCreationTest{
    
	//in, var and out dont matter
    input int a;
    output int b;
    
    
    //states
    state A, B, C;
    initial B;
    initial C / {b=0};
    
    
}