languages/io-automaton-fe/src/test/resources/invalid/InitialValueFit.ioautomaton
package invalid;

automaton InitialValueFit {

	input int a=5, b="Wrong";
	
	variable int c="Wrong";
	
	output int d="Wrong", e=5; 
	
	state Idle;	
	initial Idle;
}